<?xml version="1.0"?>
<package format="2">
  <name>hand_over_tiago</name>
  <version>0.0.1</version>
  <description>The hand_over package for tiago</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/CentralLabFacilities/hand_over.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>hand_over_msgs</depend>
  <depend>play_motion_msgs</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
